# mlops-model-serving

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  streamlit_app.py
.github/: PULL_REQUESTS_TEMPLATE.md
app/: config.py  main.py  make_model.py  model.py
artifacts/: best_model.pt  model.torchscript.pt
scripts/: export_torchscript.py
