[project]
name = "mlops-model-serving"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.9",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "pillow>=12.1.1",
]
